--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -106,6 +106,7 @@
 %Hyperplane arrangements
 \renewcommand{\b}[1]{\boldsymbol{#1}} % bold
 \newcommandx{\arrangement}[1][1 = A]{\mathcal{#1}} % arrangement
+\newcommand{\HH}{\mathbb{H}} % hyperplane
 \newcommandx{\braidArrangement}[1][1 = n]{\arrangement[B]_{#1}} % braid arrangement
 \newcommandx{\lBraidArrangement}[2][1 = n, 2 = \ell]{\arrangement[B]_{#1}^{#2}} % (l,n)-braid arrangement
 \newcommandx{\rank}[1][1 = \arrangement]{\operatorname{rk}(#1)} % rank
