--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -447,6 +447,10 @@ f_{\b{k}}(\lBraidArrangement) = n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=
 \begin{equation}
 f_{\b{k}}(\lBraidArrangement) = (n+1)^{\ell-1}  \binom{n}{k_1+1, ..., k_l+1} \prod_{i=1}^\ell (n-k_i)^{k_i}.
 \end{equation}
+For any~$\b{k} \eqdef (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n - \ell -1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$k_i$ is given by
+\begin{equation}
+f_{\b{k}}(\lBraidArrangement) = n^{\ell-1}  \binom{n-1}{k_1+1, ..., k_l+1} \prod_{i=1}^\ell (n-1-k_i)^{k_i}.
+\end{equation}
 \end{conjecture}
 
 
