--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -437,20 +437,10 @@ We adapt the proof from \cite{CKSS04}. By rooting in the part of colour $1$ cont
 
 \begin{conjecture}
 \label{thm:verticesRefinedlnBraidArrangement}
-For any~$\b{k} \eqdef (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$d_i=n-k_i-1$ is given by
+For any~$\b{k} \eqdef (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
 \[
-f_{\b{d}}(\lBraidArrangement) = n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
+n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
 \]
-\BDO{Warning : $k_i$ is the number of edges of colours i in the tree ! It has to be adapted to the dimension.}
-\vincent{I hope I made it right.}
-\BDO{Isn't there rather a shift in $k_i$? Like a partition with $k$ parts has dimension $k-1$. What about the following formula ?}
-\begin{equation}
-f_{\b{k}}(\lBraidArrangement) = (n+1)^{\ell-1}  \binom{n}{k_1+1, ..., k_l+1} \prod_{i=1}^\ell (n-k_i)^{k_i}.
-\end{equation}
-For any~$\b{k} \eqdef (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n - \ell -1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$k_i$ is given by
-\begin{equation}
-f_{\b{k}}(\lBraidArrangement) = n^{\ell-1}  \binom{n-1}{k_1+1, ..., k_l+1} \prod_{i=1}^\ell (n-1-k_i)^{k_i}.
-\end{equation}
 \end{conjecture}
 
 
@@ -572,7 +562,7 @@ f_0(\lBraidArrangement[n][2]) = \frac{2n}{n(n+1)} (n+1)^{n-1} = 2 (n + 1)^{n-2}.
 
 \begin{theorem}
 \label{thm:verticesRefined2BraidArrangement}
-For any~$0 \le k_1, k_2 \le n-1$ with~$k_1 + k_2 = n-1$, the number of vertices~$v$ of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$ obtained as the intersection of a $k_1$-flat of the first copy of the braid arrangement with a $k_2$-flat of the second copy of the braid arrangement is
+For any~$0 \le k_1, k_2 \le n-1$ with~$k_1 + k_2 = n-1$, the number of vertices~$v$ of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$ obtained as the intersection of a $(n-k_1-1)$-flat of the first copy of the braid arrangement with a $(n-k_2-1)$-flat of the second copy of the braid arrangement is
 \[
 f_{k_1, k_2}(\lBraidArrangement[n][2]) = n \binom{n-1}{k_1} (n-k_1)^{k_1-1} (n-k_2)^{k_2-1}.
 \]
