removing pdf file

--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -437,7 +437,7 @@ We adapt the proof from \cite{CKSS04}. By rooting in the part of colour $1$ cont
 
 \begin{conjecture}
 \label{thm:verticesRefinedlnBraidArrangement}
-For any~$\b{k} \eqdef (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
+For any~$k_1, \dots, k_\ell$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
 \[
 n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
 \]
