--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -223,18 +223,20 @@ For any integers~$\ell,n \geq 1$, the \defn{$(\ell,n)$-braid arrangement}~$\lBra
 
 \begin{remark}
 The combinatorics of the braid arrangement~$\braidArrangement$ is well-known.
-It has a $k$-dimensional flat~$\set{\b{x} \in \R^n}{x_i = x_j \text{ for all } i, j \in p \in \pi}$ for each partition~$\pi$ of~$[n]$ into $k+1$ parts.
-The flat poset~$\flatPoset[\braidArrangement]$ is thus the refinement poset~$\partitionPoset$ on partitions of~$[n]$.
+It has a $k$-dimensional flat~$\set{\b{x} \in \R^n}{x_i = x_j \text{ for all } i, j \in p \in \pi}$ for each set partition~$\pi$ of~$[n]$ into $k+1$ parts.
+The flat poset~$\flatPoset[\braidArrangement]$ is thus the refinement poset~$\partitionPoset$ on partitions of~$[n]$ (where a partition~$\pi$ is smaller than a partition~$\omega$ if each part of~$\pi$ is contained in a part of~$\omega$
 Its M\"obius function is given by
 \[
 \mu_{\partitionPoset}(\pi, \omega) = \prod_{p \in \omega} (-1)^{\#\pi[p]-1}(\#\pi[p]-1)!
 \]
 where~$\pi[p]$ denotes the restriction of the partition~$\pi$ to the part~$p$ of the partition~$\omega$.
+See for instance \cite{Birkhoff, Rota}.
+\cref{fig:B3} illustrates the braid arrangement~$\braidArrangement[3]$ and its associated intersection poset. 
 The M\"obius polynomial of the braid arrangement~$\braidArrangement$ is given by
 \[
-\mobPol[\braidArrangement] = \sum_{k \in [n]} x^{k-1} P(n,k) \prod_{i \in [k-1]} (y-i)
+\mobPol[\braidArrangement] = \sum_{k \in [n]} x^{k-1} S(n,k) \prod_{i \in [k-1]} (y-i)
 \]
-where~$P(n,k)$ denotes the Stirling number of second kind, \ie the number of partitions of~$n$ into~$k$ parts.
+where~$S(n,k)$ denotes the Stirling number of second kind, \ie the number of partitions of~$n$ into~$k$ parts.
 For instance
 \begin{align*}
 \mobPol[{\braidArrangement[1]}] & = 1 \\
@@ -245,40 +247,16 @@ For instance
 \end{align*}
 \end{remark}
 
-\begin{remark}[Combinatorics of the braid arrangement]
-The intersection poset of the braid arrangement $\braidArrangement$ is the poset of partitions of (a set of) size $n$, ordered by refinement.
-A partition $\pi$ is smaller than a partition $\pi'$ if the parts of $\pi$ are contained in parts of $\pi'$. 
-It is well-known (see for instance \cite{Birkhoff, Rota}) that the Möbius number of the poset of partitions of size $p$ is given by:
-\begin{equation*}
-(-1)^{p-1} (p-1)!
-\end{equation*}
-The Möbius polynomial of the braid arrangement is then given by:
-\begin{equation}
-\mu_{\braidArrangement}(x,y) = \sum_{\pi \leq \pi'} \mu(\pi, \pi') x^{|\pi|-1} y^{|\pi'|-1},
-\end{equation}
-where the sum runs over all the pair of comparable partitions and $|\pi|$ denotes the number of parts in the partition $\pi$.
-\begin{equation}
-\mu_{\braidArrangement}(x,y) = \frac{1}{xy}\sum_{1\leq k \leq n} \sum_{\ell_1, \ldots, \ell_k \geq 1} S(n,\ell) \frac{(\ell-1)!}{\prod_{i=2}^{k} \left(\sum_{j=i}^k \ell_j \right)} (-x)^{\ell} (-y)^{k},
-\end{equation}
-% k = nb of part of \pi'
-% l_i=nb de parts de \pi fusionné en la ième part de \pi'
-where $\ell=\sum_{i=1}^k \ell_i$.
-\BDO{Nicer formula ?}
-We represent on Figure \ref{fig:B3} the braid arrangement and its associated intersection poset. We generalize in this section results to $\ell$ copies of braid arrangements ; on figure \ref{IntPosB23} is represented the $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ and its associated intersection poset. 
-\end{remark}
-
 \begin{figure}
-\centering
-\includegraphics{figures/B3.pdf}
-\includegraphics{figures/PosetB3.pdf}
-\caption{The braid arrangement $\braidArrangement[3]$ and its associated intersection poset. \label{fig:B3}}
+	\centerline{\includegraphics{figures/B3.pdf} \qquad \includegraphics{figures/PosetB3.pdf}}
+	\caption{The braid arrangement $\braidArrangement[3]$ and its associated intersection poset.}
+	\label{fig:B3}
 \end{figure}
 
 \begin{figure}
-\centering
-\includegraphics{figures/B23.pdf}
-\includegraphics[width=8cm]{figures/PosetB23.pdf}
-\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ and its associated intersection poset. \label{fig:B23}}
+	\centerline{\includegraphics{figures/B23.pdf} \qquad \includegraphics[width=8cm]{figures/PosetB23.pdf}}
+	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ and its associated intersection poset.}
+	\label{fig:B23}
 \end{figure}
 
 \begin{definition}
@@ -307,16 +285,14 @@ A {$(\ell,n)$-forest} (resp.~{$(\ell,n)$-tree}) is a forest (resp. tree) in whic
 \item if a vertex $v$ is not a root, the unique path from $v$ to the root starts with an edge $e$ of color $c$: $e$ is then the only edge adjacent to $v$ of this color. 
 \end{itemize}
 We represent this interpretation of $(\ell,n)$-forests on Figure \ref{fig:forests} and the according intersection poset of $\lBraidArrangement[3][2]$ on Figure \ref{IntPosB23}. 
+\vincent{Retravailler}
 \end{remark}
 
 \begin{figure}
-
-\centering
-\resizebox{0.8\textwidth}{!}{
-\includegraphics{figures/IntPosB23.pdf}}
-\caption{The intersection poset of $\lBraidArrangement[3][2]$ in terms of forests. \label{IntPosB23}}
+	\centerline{\resizebox{0.8\textwidth}{!}{\includegraphics{figures/IntPosB23.pdf}}}
+	\caption{The intersection poset of $\lBraidArrangement[3][2]$ in terms of forests.}
+	\label{IntPosB23}
 \end{figure}
-
 
 \begin{theorem}
 \label{thm:MobiusPolynomial}
@@ -564,21 +540,21 @@ f_0(\lBraidArrangement[n][2]) = \frac{2n}{n(n+1)} (n+1)^{n-1} = 2 (n + 1)^{n-2}.
 \label{thm:verticesRefined2BraidArrangement}
 For any~$0 \le k_1, k_2 \le n-1$ with~$k_1 + k_2 = n-1$, the number of vertices~$v$ of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$ obtained as the intersection of a $(n-k_1-1)$-flat of the first copy of the braid arrangement with a $(n-k_2-1)$-flat of the second copy of the braid arrangement is
 \[
-f_{k_1, k_2}(\lBraidArrangement[n][2]) = n \binom{n-1}{k_1} (n-k_1)^{k_1-1} (n-k_2)^{k_2-1}.
+n \binom{n-1}{k_1} (n-k_1)^{k_1-1} (n-k_2)^{k_2-1}.
 \]
 \end{theorem}
 
 \begin{proof}
-Note that the formula follows from \cref{thm:verticesRefinedlnBraidArrangement}.
-We give an alternative simple proof.
-By \cref{coro:fbvectorslBraidArrangement}, we want to count the number of $(2,n)$-trees~$\b{F} \eqdef (F_1,F_2)$ where~$F_1$ has $k_1+1$ parts while $F_2$ has $k_2+1$ parts.
+%Note that the formula follows from \cref{thm:verticesRefinedlnBraidArrangement}.
+%We give an alternative simple proof.
+By \cref{coro:fbvectorslBraidArrangement}, we want to count the number~$t_{k_1,k_2}$ of $(2,n)$-trees~$\b{F} \eqdef (F_1,F_2)$ where~$F_1$ has $n-k_1$ parts while $F_2$ has $n-k_2$ parts.
 Consider the intersection tree~$T$ of~$\b{F}$ with vertices labeled by the parts of~$F_1$ and of~$F_2$ and edges labeled by~$[n]$, root~$T$ at an arbitrary part of~$F_1$, forget the vertex labels of~$T$, and send each edge label of~$T$ to the next vertex away from the root.
 See \cref{fig:tree}.
 Note here that in contrast to the proof of \cref{thm:vertices2nBraidArrangement}, we have rooted~$T$ here at an arbitrary part of~$F_1$ to have more symmetry.
-The result is a spanning tree of the complete bipartite graph~$K_{k_1+1, k_2+1}$ together with a choice of which of the labels are on each part of this graph.
-Since the number of spanning trees of~$K_{k_1+1, k_2+1}$ is known to be~$(k_1+1)^{k_2} (k_2+1)^{k_1}$, we obtain that
+The result is a spanning tree of the complete bipartite graph~$K_{n-k_1, n-k_2}$ together with a choice of which of the labels are on each part of this graph.
+Since the number of spanning trees of~$K_{n-k_1, n-k_2}$ is known to be~$(n-k_1)^{n-k_2-1} (n-k_2)^{n-k_1-1} = (n-k_1)^{k_1} (n-k_2)^{k_2}$, we obtain that the number~$t_{k_1,k_2}$ is given by
 \[
-f_{k_1, k_2}(\lBraidArrangement[n][2]) = \underbrace{\frac{1}{k_1+1}  \phantom{\!\!\!\!\bigg)}}_{\text{root}} \underbrace{\binom{n}{k_1}}_{\text{labels}} \underbrace{(k_1+1)^{k_2} (k_2+1)^{k_1} \phantom{\!\!\!\!\bigg)}}_{\# \text{ spanning trees }} = n \binom{n-1}{k_1} (n-k_1)^{k_1-1} (n-k_2)^{k_2-1}.
+t_{k_1,k_2} = \underbrace{\frac{1}{n-k_1}  \phantom{\!\!\!\!\bigg)}}_{\text{root}} \underbrace{\binom{n}{n-k_1-1}}_{\text{labels}} \underbrace{(n-k_1)^{k_1} (n-k_2)^{k_2} \phantom{\!\!\!\!\bigg)}}_{\# \text{ spanning trees }} = n \binom{n-1}{k_1} (n-k_1)^{k_1-1} (n-k_2)^{k_2-1}.
 \qedhere
 \]
 \end{proof}
