--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -231,7 +231,7 @@ Its M\"obius function is given by
 \]
 where~$\pi[p]$ denotes the restriction of the partition~$\pi$ to the part~$p$ of the partition~$\omega$.
 See for instance \cite{Birkhoff, Rota}.
-\cref{fig:B3} illustrates the braid arrangement~$\braidArrangement[3]$ and its associated intersection poset. 
+\cref{fig:braidArrangement31} illustrates the braid arrangement~$\braidArrangement[3]$ and its associated intersection poset. 
 The M\"obius polynomial of the braid arrangement~$\braidArrangement$ is given by
 \[
 \mobPol[\braidArrangement] = \sum_{k \in [n]} x^{k-1} S(n,k) \prod_{i \in [k-1]} (y-i)
@@ -248,15 +248,15 @@ For instance
 \end{remark}
 
 \begin{figure}
-	\centerline{\includegraphics{figures/B3.pdf} \qquad \includegraphics{figures/PosetB3.pdf}}
-	\caption{The braid arrangement $\braidArrangement[3]$ and its associated intersection poset.}
-	\label{fig:B3}
+	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement31}}
+	\caption{The braid arrangement $\braidArrangement[3]$ (left) and its flat poset~$\flatPoset[{\braidArrangement[3]}]$ (right).}
+	\label{fig:braidArrangement31}
 \end{figure}
 
 \begin{figure}
-	\centerline{\includegraphics{figures/B23.pdf} \qquad \includegraphics[width=8cm]{figures/PosetB23.pdf}}
-	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ and its associated intersection poset.}
-	\label{fig:B23}
+	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement32}}
+	\caption{The $(2,3)$-braid arrangement $\lBraidArrangement[3][2]$ (left) and its flat poset~$\flatPoset[{\lBraidArrangement[3][2]}]$ (right).}
+	\label{fig:braidArrangement32}
 \end{figure}
 
 \begin{definition}
@@ -268,10 +268,8 @@ In other words, $\forestPoset$ is the subposet of the $\ell$th Cartesian power o
 Note that the maximal elements of~$\forestPoset$ are the $(\ell, n)$-trees.
 %
 \begin{figure}
-	\centerline{\includegraphics[scale=1]{forests}}
-	\includegraphics{forest2}\hspace{2cm}
-	\includegraphics{forest1}
-	\caption{A $(3,6)$-forest with its intersection hypergraph (left) and a $(3,6)$-tree with its intersection hypertree (right). \BDO{@Vincent : j'aimerais mettre mes figures avec les tiennes, pourrais-tu juste scinder "forests.pdf" en deux stp?}}
+	\centerline{\includegraphics[scale=.9]{forests}}
+	\caption{A $(3,6)$-forest with its intersection hypergraph and the corresponding forest (top) and a $(3,6)$-tree with its intersection hypertree and the corresponding tree (bottom).}
 	\label{fig:forests}
 \end{figure}
 \end{definition}
@@ -284,14 +282,14 @@ A {$(\ell,n)$-forest} (resp.~{$(\ell,n)$-tree}) is a forest (resp. tree) in whic
 \item edges are colored by $\{1, \ldots, \ell\}$ 
 \item if a vertex $v$ is not a root, the unique path from $v$ to the root starts with an edge $e$ of color $c$: $e$ is then the only edge adjacent to $v$ of this color. 
 \end{itemize}
-We represent this interpretation of $(\ell,n)$-forests on Figure \ref{fig:forests} and the according intersection poset of $\lBraidArrangement[3][2]$ on Figure \ref{IntPosB23}. 
+We represent this interpretation of $(\ell,n)$-forests on Figure \ref{fig:forests} and the according intersection poset of $\lBraidArrangement[3][2]$ on Figure \ref{fig:braidArrangementTrees32}. 
 \vincent{Retravailler}
 \end{remark}
 
 \begin{figure}
-	\centerline{\resizebox{0.8\textwidth}{!}{\includegraphics{figures/IntPosB23.pdf}}}
-	\caption{The intersection poset of $\lBraidArrangement[3][2]$ in terms of forests.}
-	\label{IntPosB23}
+	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangementTrees32}}
+	\caption{The flat poset of $\lBraidArrangement[3][2]$ in terms of forests. See also \cref{fig:braidArrangement32}.}
+	\label{fig:braidArrangementTrees32}
 \end{figure}
 
 \begin{theorem}
@@ -415,7 +413,7 @@ We adapt the proof from \cite{CKSS04}. By rooting in the part of colour $1$ cont
 \label{thm:verticesRefinedlnBraidArrangement}
 For any~$k_1, \dots, k_\ell$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
 \[
-n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
+n^{\ell-1}  \binom{n-1}{k_1, ..., k_\ell} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
 \]
 \end{conjecture}
 
