--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../Poissons.tex
 
-\section{Combinatorics}
+\section{Combinatorics of iterated diagonals}
 
 \subsection{Combinatorics of generically translated copies of the braid arrangement}
 \label{sec:kBraidArrangement}
