--- a/paper/sec/introduction.tex
+++ b/paper/sec/introduction.tex
@@ -4,13 +4,18 @@
 \label{s:introduction}
 
 In this article, discrete geometry \emph{informs} higher algebra.
+First, we obtain some purely combinatorial results, whose study is motivated by higher algebra: the combinatorially inclined reader can read the first part of this introduction, and go directly to Section 1.
+Second, we obtain some (higher) algebraic results via discrete geometry: the algebraically inclined reader can read the second part of this introduction, and go directly to Section 2.
 
-Some purely combinatorial results, whose study is motivated by higher algebra:
-the combinatorially inclined reader can read the first part of this introduction, and go directly to Section 1.
+%The reader who reads the entire article will start feeling the essence of what could be \emph{higher discrete geometry}, a new field of mathematics whose purpose is to use the theory of polytopes in order to study higher algebraic structures and homotopy theory.
+%FAIRE plutôt que dire. 
 
-Some higher algebraic results, obtained via discrete geometry: the algebraically inclined reader can read the second part of this introduction, and go directly to Section 2.
+\subsection*{Motivation}
 
-The reader who reads the entire article will start feeling the essence of what could be \emph{higher discrete geometry}, a new field of mathematics whose purpose is to use the theory of polytopes in order to study higher algebraic structures and homotopy theory.
+The purpose of this article is to study cellular diagonals on the permutahedra, which are cellular maps homotopic to the usual thin diagonal $\triangle : P \to P \times P, x \mapsto (x,x)$.
+Such diagonals, and in particular coherent families that we call \emph{operadic} diagonals (see [DEF]), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties \cite{losevNewModuliSpaces2000}; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of a coproduct on permutahedral sets, which are used to models of two-fold loop spaces \cite{SaneblidzeUmble04}; and their study is moreover needed to pursue the work of Baues aiming at defining explicit combinatorial models for higher iterated loop spaces \cite{bauesGeometryLoopSpaces1980}. 
+Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $\Ainf$-algebras and $\Ainf$-morphisms \cite{MazuirLA22}.
+\Guillaume{lien avec les matroides?}
 
 \subsection*{Combinatorics}
 
@@ -30,11 +35,6 @@ We end this combinatorial section with a conjecture on edge-colored trees.
 
 
 \subsection*{Higher Algebra}
-
-The purpose of this article is to study cellular diagonals on the permutahedra, which are cellular maps homotopic to the usual thin diagonal $\triangle : P \to P \times P, x \mapsto (x,x)$.
-Such diagonals, and in particular coherent families that we call \emph{operadic} diagonals (see [DEF]), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties \cite{losevNewModuliSpaces2000}; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of a coproduct on permutahedral sets, which are used to models of two-fold loop spaces \cite{SaneblidzeUmble04}; and their study is moreover needed to pursue the work of Baues aiming at defining explicit combinatorial models for higher iterated loop spaces \cite{bauesGeometryLoopSpaces1980}. 
-Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $\Ainf$-algebras and $\Ainf$-morphisms \cite{MazuirLA22}.
-\Guillaume{lien avec les matroides?}
 
 The first cellular diagonal for the permutahedra was defined at the level of chains by S. Saneblidze and R. Umble in \cite{SaneblidzeUmble04}, we will call it the \emph{SU diagonal}. 
 Cellular diagonals for the associahedra and the multiplihedra were also defined there, via projection. 
